--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^11.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "mqtt": "^5.10.2",
     "nuxt": "^3.12.3",
     "sass": "^1.77.7",
     "vue": "latest"
