--- a/.github/workflows/docker-ci-kissen.yml
+++ b/.github/workflows/docker-ci-kissen.yml
@@ -2,7 +2,7 @@
 #  This file is a template for the docker ci prod workflow
 #  The pipeline is triggered on push to a tag that starts with 'v'
 #  The pipeline builds and pushes the docker image to the Github Packages Registry
-#  
+#
 #  This file was generated using the command: `bump --setup-workflows`
 #  To install bump run the command: `npm install -g @itmr-dev/bump`
 #
@@ -14,8 +14,8 @@ name: prod docker ci (@itmr.dev/bump)
 
 on:
   push:
-    tags:
-      - v*
+    branches:
+      - Kissen
 
 jobs:
   build_and_deploy:
@@ -31,9 +31,9 @@ jobs:
       - name: Build and push docker image
         uses: docker/build-push-action@v3
         with:
-          push: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          push: true
           tags: |
-            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:Kissen
             ghcr.io/${{ github.repository }}:${{ github.ref_name }}
             ghcr.io/${{ github.repository }}:run-${{ github.run_id }}-${{ github.run_attempt }}
             ghcr.io/${{ github.repository }}:sha-${{ github.sha }}
