--- a/.github/workflows/docker-ci-kissen.yml
+++ b/.github/workflows/docker-ci-kissen.yml
@@ -17,6 +17,10 @@ on:
     branches:
       - Kissen
 
+permissions:
+  packages: write
+  contents: read
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
